<resources>
    <string name="app_name">DeudoresApp</string>
    <string name="title_list">Lista</string>
    <string name="title_create">Crear</string>
    <string name="title_read">Buscar</string>
    <string name="title_update">Actualizar</string>
    <string name="title_delete">Borrar</string>
    <string name="name_hint">Digite el nombre</string>
    <string name="phone_hint">Digite el telefono</string>
    <string name="amout_hint">Digite el valor de la deuda</string>
    <string name="create">Crear</string>
    <string name="example_name">Wilber Vargas</string>
    <string name="example_amount">120000</string>
    <string name="title_detail">Detalle del deudor</string>
    <string name="example_phone">3108767692</string>
    <string name="phone_value">Teléfono: %s</string>
    <string name="amount_value">Valor de la deuda: $ %s</string>
    <string name="dont_exist">No Existe</string>
    <string name="debtor_eliminated">Deudor eliminado</string>
    <string name="debtor_updated">Deudor Actualizado</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="want_to_eliminate">\"Desea Eliminar a \"</string>
    <string name="your_debt_is">\", su deuda es: \"</string>
    <string name="empty" />
    <string name="UserEmailHint">Email de Usuario</string>
    <string name="UserPasswordHint">Contraseña</string>
    <string name="login">Iniciar Sesion</string>
    <string name="info_registrarse">¿No tienes Cuenta? REGISTRARSE click Aqui.</string>
    <string name="loginTitle">Introduca sus datos de Usuario</string>
    <string name="requiered_field">*Campo requerido</string>
    <string name="email_hint">Digite el email</string>
    <string name="password_hint">Digite su contraseña</string>
    <string name="rep_password">Repita su contraseña</string>
    <string name="save">Guardar</string>
    <string name="register_form">Formulario de registro</string>
    <string name="password_error">Las contraseñas no son iguales</string>
    <string name="data_Error">Debe rellenar todos los campos</string>
    <string name="password4digit">contraseña de minimo 4 digitos</string>
    <string name="password_different">La contraseña no coincide</string>
</resources>